test/src/e2e_vm_tests/test_programs/should_pass/language/const_lacks_type_annotation/src/main.sw
library;

const X = 0;
