test/src/e2e_vm_tests/test_programs/should_fail/repeated_const_two_libs/src/lib2.sw
library lib2;

pub const X = 6;
